<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/double_space"
    android:background="@color/colorBgSecondary"
    tools:context=".ui.login.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_image_size"
        app:srcCompat="@drawable/ic_logo_h" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_space"
        style="@style/TextView"
        android:text="@string/label_name"/>

    <EditText
        android:id="@+id/name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/TextView"
        android:text="@string/label_email"/>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText" />

    <TextView
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView"
        android:text="@string/label_password"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText" />

    <TextView
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView"
        android:text="@string/label_password_confirmation"/>

    <EditText
        android:id="@+id/passwordConfirmation"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"/>

    <Button android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_space"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginEnd="@dimen/btn_margin"
        android:text="@string/btn_register"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        android:gravity="center_horizontal"
        style="@style/TextView"
        android:text="@string/label_go_to_login"/>

</LinearLayout>