<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/double_space"
    android:background="@color/colorBgSecondary"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_image_size"
        app:srcCompat="@drawable/ic_logo_h"
        android:contentDescription="@string/logo_image" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_space"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_space"
        android:layout_marginBottom="@dimen/triple_space"
        android:text="@string/label_access_login"
        style="@style/TextView"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        style="@style/TextView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        style="@style/EditText"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        style="@style/TextView"
        android:text="@string/label_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/EditText"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_space"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginEnd="@dimen/btn_margin"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        android:gravity="center_horizontal"
        style="@style/TextView"
        android:text="@string/label_go_to_register" />

    </LinearLayout>