<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/border"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:visibility="gone"
                android:layout_gravity="center" />


            <TextView
                android:labelFor="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_weight="1"
                android:text="@string/label_email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                style="@style/EditTextDisabled"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/label_email" />

            <TextView
                android:labelFor="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_weight="1"
                android:text="@string/label_username"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/EditText"
                android:autofillHints="@string/label_username" />

            <TextView
                android:labelFor="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_weight="1"
                android:text="@string/label_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/EditText"
                android:autofillHints="@string/label_name" />


            <TextView
                android:labelFor="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_weight="1"
                android:text="@string/label_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/EditText"
                android:autofillHints="@string/label_address" />

            <TextView
                android:labelFor="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_weight="1"
                android:text="@string/label_phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/EditText"
                android:autofillHints="@string/label_phone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_marginStart="@dimen/margin_xxlarge"
                android:layout_marginEnd="@dimen/margin_xxlarge"
                android:text="@string/btn_save" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>